--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
           <li class="nav-item">
             <a [routerLink]="['/login']" class="nav-link" ><span class="glyphicon glyphicon-user">Login</span></a>
           </li>       
+          <li class="nav-item">
+            <a [routerLink]="['/products']" class="nav-link" ><span class="glyphicon glyphicon-user">Products</span></a>
+          </li>
         </ul>
       </div>
     </nav>
