--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,1 +1,31 @@
-<p>product-component works!</p>
+<!DOCTYPE html>
+    <form>
+        <div class="form-group required row mb-3">
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Enter Name"/>
+            </div>
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Product Code</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Product Code"/>
+            </div>
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Description</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Description"/>
+            </div>
+           
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">CategoryName</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Category Name"/>
+            </div>
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Price</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Price"/>
+            </div>
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Image</label>
+            <div class="col-sm-10">
+               <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Price"/>
+            </div>
+        </div>
+    </form>
+</html>
