--- a/src/app/product-component/product-component.component.css
+++ b/src/app/product-component/product-component.component.css
@@ -1,4 +1,7 @@
 .form-group.required .control-label:after{
     content: "*";
     color: red;
+    position: absolute;
+    margin-left: 8px;
+    top: 7px;
 }
