--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
     <form>
-        <div class="form-group required row mb-3">
-            <div class="form-outline mb-4">
+          <div class="form-group required">
+            <label class="col-md-2 control-label">Name </label>
+            <div class=" form-outline md-4">               
                 <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="First Name" required/>
             </div>
-
-            <div class="form-outline mb-4">
+          </div>
+          <div class="form-group required">
+            <label class="col-md-2 control-label">Last Name</label>
+            <div class="form-outline md-4">
                 <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Last Name" required/>
             </div>  
-        </div>
+          </div>
+           
     </form>
