edit form in product html

--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -8,7 +8,7 @@
           </div>
           <div class="form-group required">
             <label class="col-md-2 control-label">Last Name</label>
-            <div class="form-outline md-4">
+            <div class="form-group mx-sm-3 mb-2">
                 <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Last Name" required/>
             </div>  
           </div>
