--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,16 +1,38 @@
-<!DOCTYPE html>
-    <form>
-          <div class="form-group required">
-            <label class="col-md-2 control-label">Name </label>
-            <div class=" form-outline md-4">               
-                <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="First Name" required/>
+<section class="vh-100 bg-image  backgroud-mage">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-4">
+                <h2 class="text-uppercase text-center mb-5">Create Product</h2>
+                <form>
+                  <div class="form-outline mb-4">
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="CategoryName" required/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
+                  </div>
+                  <div class="d-flex justify-content-center">
+                    <button type="button" class="btn btn-outline-success form-control">Submit</button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
-          <div class="form-group required">
-            <label class="col-md-2 control-label">Last Name</label>
-            <div class="form-group mx-sm-3 mb-2">
-                <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Last Name" required/>
-            </div>  
-          </div>
-           
-    </form>
+        </div>
+      </div>
+    </div>
+  </section>
