updated product html

--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -7,7 +7,7 @@
               <div class="card-body p-4">
                 <h2 class="text-uppercase text-center mb-5">Create Product</h2>
                 <form>
-                  <div class="form-outline mb-4">
+                  <div class="form-group required mb-4">
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
                   <div class="form-outline mb-4">
@@ -17,13 +17,13 @@
                     <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
                   </div>
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="CategoryName" required/>
+                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="CategoryName" required/>
                   </div>
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
+                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
                   </div>
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
+                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
                   </div>
                   <div class="d-flex justify-content-center">
                     <button type="button" class="btn btn-outline-success form-control">Submit</button>
