updated product css to include asterik

--- a/src/app/product-component/product-component.component.css
+++ b/src/app/product-component/product-component.component.css
@@ -1,4 +1,4 @@
-.form-group.required .control-label:after{
+.form-group.required .required:after{
     content: "*";
     color: red;
     position: absolute;
