--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,6 +1,14 @@
+<section class="vh-100 bg-image  backgroud-mage">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-4">
                 <h2 class="text-uppercase text-center mb-5">Create Product</h2>
                 <form>
                   <div class="form-group required mb-4">
+                    <label class="form-label required">Product Name</label>
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
                   <div class="form-outline mb-4">
@@ -22,3 +30,10 @@
                     <button type="button" class="btn btn-outline-success form-control">Submit</button>
                   </div>
                 </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
