updated product html

--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -6,8 +6,8 @@
             <div class="card" style="border-radius: 15px;">
               <div class="card-body p-4">
                 <h2 class="text-uppercase text-center mb-5">Create Product</h2>
-                <form>
-                  <div class="form-group required mb-4">
+                <form class="form-group">
+                  <div >
                     <label class="form-label required">Product Name</label>
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
