--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -6,24 +6,27 @@
             <div class="card" style="border-radius: 15px;">
               <div class="card-body p-4">
                 <h2 class="text-uppercase text-center mb-5">Create Product</h2>
-                <form class="form-group">
-                  <div >
-                    <label class="form-label required">Product Name</label>
+                <form>
+                  <div class="form-group required mb-4">
+                    <label class="control-label">Product Name</label>
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required/>
                   </div>
-                  <div class="form-outline mb-4">
+                  <div class="form-group required mb-4">
+                    <label class="control-label">Description</label>
                     <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
                   </div>
-                  <div class="form-outline mb-4">
-                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="CategoryName" required/>
+                  <div class="form-group required mb-4">
+                    <label class="control-label">Category Name</label>
+                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Category Name" required/>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
                   </div>
-                  <div class="form-outline mb-4">
+                  <div class="form-group required mb-4">
+                    <label class="control-label">Image</label>
                     <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
                   </div>
                   <div class="d-flex justify-content-center">
