--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -18,9 +18,13 @@
                     <label class="control-label">Description</label>
                     <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
                   </div>
-                  <div class="form-group required mb-4">
-                    <label class="control-label">Category Name</label>
-                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Category Name" required/>
+                  <div class="input-group required mb-4">
+                    <label class="input-group-text">Category Name</label>
+                    <select class="form-select">
+                        <option selected>Choose</option>
+                        <option value="1">Verge</option>
+                        <option value="2">Fruit</option>
+                    </select>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
