--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -7,21 +7,21 @@
               <div class="card-body p-4">
                 <h2 class="text-uppercase text-center mb-5">Create Product</h2>
                 <form>
-                  <div class="form-group required mb-4">
-                    <label class="control-label">Product Name</label>
+                  <div class="form-group mb-4">
+                    <label class="control-label required">Product Name</label>
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required/>
                   </div>
-                  <div class="form-group required mb-4">
-                    <label class="control-label">Description</label>
+                  <div class="form-group  mb-4">
+                    <label class="control-label required">Description</label>
                     <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
                   </div>
-                  <div class="input-group required mb-4">
-                    <label class="input-group-text">Category Name</label>
+                  <div class="input-group  mb-4">
+                    <label class="input-group-text control-label required">Category Name</label>
                     <select class="form-select">
-                        <option selected>Choose</option>
+                        <option selected>Choose ...</option>
                         <option value="1">Verge</option>
                         <option value="2">Fruit</option>
                     </select>
@@ -29,9 +29,9 @@
                   <div class="form-outline mb-4">
                     <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
                   </div>
-                  <div class="form-group required mb-4">
-                    <label class="control-label">Image</label>
-                    <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
+                  <div class="input-group mb-4">
+                    <label class="input-group-text">Upload Image</label>
+                    <input type="file" id="form3Example4cg" class="form-control form-control-lg" placeholder="Image" required/>
                   </div>
                   <div class="d-flex justify-content-center">
                     <button type="button" class="btn btn-outline-success form-control">Submit</button>
