updated labels in product html

--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -12,13 +12,14 @@
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Name" required/>
                   </div>
                   <div class="form-outline mb-4">
+                    <label class="control-label required">Product Code</label>
                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required/>
                   </div>
-                  <div class="form-group  mb-4">
-                    <label class="control-label required">Description</label>
+                  <div class="form-group mb-4">
+                    <label class="orm-group required">Description</label>
                     <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Description" required/>
                   </div>
-                  <div class="input-group  mb-4">
+                  <div class="input-group mb-4">
                     <label class="input-group-text control-label required">Category Name</label>
                     <select class="form-select">
                         <option selected>Choose ...</option>
@@ -27,6 +28,7 @@
                     </select>
                   </div>
                   <div class="form-outline mb-4">
+                    <label class="control-label required">Product Price</label>
                     <input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Price" required/>
                   </div>
                   <div class="input-group mb-4">
