added product list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,10 @@
             <a [routerLink]="['/login']" class="nav-link" ><span class="glyphicon glyphicon-user">Login</span></a>
           </li>       
           <li class="nav-item">
-            <a [routerLink]="['/products']" class="nav-link" ><span class="glyphicon glyphicon-user">Products</span></a>
+            <a [routerLink]="['/add-products']" class="nav-link" ><span class="glyphicon glyphicon-user">Add Products</span></a>
+          </li>
+          <li class="nav-item">
+            <a [routerLink]="['/product-list']" class="nav-link" ><span class="glyphicon glyphicon-user">Products</span></a>
           </li>
         </ul>
       </div>
