--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -1,1 +1,47 @@
-<p>product-list-component works!</p>
+<table>
+    <thead>
+        <tr>
+            <th class="th-sm">
+                Name
+            </th>
+            <th class="th-sm">
+                Product Code
+            </th>
+            <th class="th-sm">
+                Description
+            </th>
+            <th class="th-sm">
+                Category Name
+            </th>
+            <th class="th-sm">
+                Price
+            </th>
+            <th class="th-sm">
+                Image
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Apple</td>
+            <td>Cabbage</td>
+        </tr>
+        <tr>
+            <td>123456</td>
+            <td>321654</td>
+        </tr>
+        <tr>
+            <td>this is a fruit </td>
+            <td>this is a verge </td>
+        </tr>
+         <tr>
+            <td>fruit </td>
+            <td>verge </td>
+         </tr> 
+         <tr>
+            <td>R2.00 </td>
+            <td>R5.00 </td>
+         </tr>  
+        </tr>
+    </tbody>
+</table>
