--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -13,7 +13,7 @@
                   </div>
                   <div class="form-outline mb-4">
                     <label class="control-label required">Product Code</label>
-                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required/>
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Product Code" required=true/>
                   </div>
                   <div class="form-group mb-4">
                     <label class="orm-group required">Description</label>
