--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -18,8 +18,12 @@
            </tr>
        </thead>
        <tbody>
-           <tr>
-
+           <tr *ngFor="let product pf products | listFilter: searchProductByName | slice: (page-1) * pageSize : page * pageSize; index as i">
+              <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
+              <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + product.image" class="mr-2"
+                style="width: 20px">
+            </td>
+            
            </tr>
        </tbody>  
    </table>
