added page sizes in pagination

--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -18,9 +18,9 @@
            </tr>
        </thead>
        <tbody>
-           <tr>
+        <tr>
               <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
-              <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + product.image" class="mr-2"
+              <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + products.image" class="mr-2"
                 style="width: 20px">
             </td>
             
