--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -3,7 +3,7 @@
    <form>
        <div class="form-group form-inline">
            Search product by name
-           <input type="text" class="form-control ml-2" name="searchProduct"/>
+           <input type="text" class="form-control ml-2" name="searchProduct" [(ngModel)]="searchProduct" (input)="Search($event.target.value)"/>
        </div>
    </form>
    <table class="table table-striped">
@@ -18,7 +18,7 @@
            </tr>
        </thead>
        <tbody>
-        <tr>
+          <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i"> 
               <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
               <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + products.image" class="mr-2"
                 style="width: 20px">
