--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -20,7 +20,7 @@
        <tbody>
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i"> 
               <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
-              <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + products.image" class="mr-2"
+              <td><img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + product.image" class="mr-2"
                 style="width: 20px">
             </td>
             
