cahnge event type

--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -3,7 +3,7 @@
    <form>
        <div class="form-group form-inline">
            Search product by name
-           <input type="text" class="form-control ml-2" name="searchProduct" [(ngModel)]="searchProduct" (input)="search($event.target.value)"/>
+           <input type="text" class="form-control ml-2" name="searchProduct" [(ngModel)]="searchProduct" (input)="search($any($event))"/>
        </div>
    </form>
    <table class="table table-striped">
