--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -19,13 +19,13 @@
        </thead>
        <tbody>
           <tr> 
-              <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
+              <!--<th scope="row">{{(page-1) * pageSize + i + 1 }}</th>-->
               <td></td>
             
            </tr>
        </tbody>  
    </table>
-   <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [maxSize]="5" [boundaryLinks]="true" [pageSize]="pageSize" class="d-flex justify-content-center">
+   <ngb-pagination [collectionSize]="collectionSize"  [maxSize]="5" [boundaryLinks]="true" [pageSize]="pageSize" class="d-flex justify-content-center">
 
    </ngb-pagination>
 </div>
