--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -18,14 +18,14 @@
            </tr>
        </thead>
        <tbody>
-          <tr> 
-              <!--<th scope="row">{{(page-1) * pageSize + i + 1 }}</th>-->
+          <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i"> 
+              <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
               <td></td>
             
            </tr>
        </tbody>  
    </table>
-   <ngb-pagination [collectionSize]="collectionSize"  [maxSize]="5" [boundaryLinks]="true" [pageSize]="pageSize" class="d-flex justify-content-center">
+   <ngb-pagination  class="d-flex justify-content-center">
 
    </ngb-pagination>
 </div>
