--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -19,7 +19,12 @@
        </thead>
        <tbody>
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i"> 
-              <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
+              
+              <td>{{product.name | string }}</td>
+              <td>{{product.code | string }}</td>
+              <td>{{product.description | string}}</td>
+              <td>{{product.price | string }}</td>
+              <td>{{product.image | string}}</td>
               <td></td>
             
            </tr>
