--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -21,11 +21,11 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                <td>
-                   <img [src] = "'https://upload.wikimedia.org/wikipedia/commons/' + country.flag'" class="mr-2" style="width: 20px;">{{product.image}}
+                   <img [src] = "'https://upload.wikimedia.org/wikipedia/commons/' + country.flag'" class="mr-2" style="width: 20px;">{{products.image}}
                </td>
-               <td>{{ product.name }}</td>
-               <td>{{ product.code }}</td>
-               <td>{{ product.Description }}</td>
+               <td>{{ products.name }}</td>
+               <td>{{ products.code }}</td>
+               <td>{{ products.Description }}</td>
               
          
               
@@ -33,7 +33,7 @@
            </tr>
        </tbody>  
    </table>
-   <ngb-pagination  class="d-flex justify-content-center">
+   <ngb-pagination  [collectionSize]= "collectionSize" [(page)]="page" [maxSize]="5" [boundaryLinks]="true" [pageSize]="pageSize" class="d-flex justify-content-center">
 
    </ngb-pagination>
 </div>
