--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -21,7 +21,7 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                <td>
-                   <img [src] = "'https://upload.wikimedia.org/wikipedia/commons/' + country.flag'" class="mr-2" style="width: 20px;">{{products.image}}
+                   <img [src] = "'https://upload.wikimedia.org/wikipedia/commons/' + products.image'" class="mr-2" style="width: 20px;">{{products.image}}
                </td>
                <td>{{ products.name }}</td>
                <td>{{ products.code }}</td>
