fixed description spelling

--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -23,7 +23,7 @@
                
                <td>{{ products.name }}</td>
                <td>{{ products.code }}</td>
-               <td>{{ products.Description }}</td>
+               <td>{{ products.description }}</td>
               
          
               
