--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -21,9 +21,9 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                
-               <td>{{ products.name }}</td>
-               <td>{{ products.code }}</td>
-               <td>{{ products.description }}</td>
+               <td>{{ product.name }}</td>
+               <td>{{ product.code }}</td>
+               <td>{{ product.description }}</td>
               
          
               
