--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -21,9 +21,9 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                
-               <td>{{ product.name }}</td>
-               <td>{{ product.code }}</td>
-               <td>{{ product.description }}</td>  
+               <td>{{ product.name | string }}</td>
+               <td>{{ product.code | string }}</td>
+               <td>{{ product.description | string }}</td>  
            </tr>
        </tbody>  
    </table>
