--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -21,7 +21,8 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                
-               
+               <td>{{ product.name }}</td>
+               <td>{{ product.code }}</td>
            </tr>
        </tbody>  
    </table>
