--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -3,7 +3,7 @@
    <form>
        <div class="form-group form-inline">
            Search product by name
-           <input type="text" class="form-control ml-2" name="searchProduct" [(ngModel)]="searchProduct" (input)="search($any($event))"/>
+           <input type="text" class="form-control ms-2" name="searchProduct" [(ngModel)]="searchProduct" (input)="search($any($event))"/>
        </div>
    </form>
    <table class="table table-striped">
@@ -21,8 +21,7 @@
           <tr *ngFor="let product of products | listFilter: searchProduct | slice: (page-1) * pageSize : page * pageSize; index as i">
                <th scope="row">{{(page-1) * pageSize + i + 1 }}</th>
                
-               <td>{{ product.name }}</td>
-               <td>{{ product.code }}</td>
+        
            </tr>
        </tbody>  
    </table>
