removed pagination controls

--- a/src/app/product-list-component/product-list-component.component.html
+++ b/src/app/product-list-component/product-list-component.component.html
@@ -31,6 +31,6 @@
        </tbody>  
    </table>
    <div>
-    <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" ></pagination-controls>
+    <ngb-pagination  id="listing_pagination" maxSize="5" directionLinks="true"></ngb-pagination>
 </div>
 </div>
